--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                 "Lintels": Math.ceil(4 * scale),
                 "Rolls of Brick Force (6 inches)": Math.ceil(5 * scale),
                 "Roll of DPC (6 inches)": Math.ceil(1 * scale),
-                "Door Frames": Math.ceil(1 * scale),
-                "Window Frames": Math.ceil(2 * scale),
+                "Door Frames": Math.floor(1 * scale),
+                "Window Frames": Math.floor(2 * scale),
                 "Rafters (4.2m)": Math.ceil(5 * scale),
                 "Purlins (4.2m)": Math.ceil(5 * scale),
                 "IBR or Corrugated Iron Sheets": Math.ceil(5 * scale),
