--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
                 "Plain Wire Bar (kg)": Math.ceil(5 * scale)
             };
 
+            if(materials[7] == 0){
+                materials[7] = 1;
+            }
             const tableBody = document.querySelector('#materials-table tbody');
             tableBody.innerHTML = '';
 
