--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                 "Plain Wire Bar (kg)": Math.ceil(5 * scale)
             };
 
-            if(materials[7] == 0){
-                materials[7] = 1;
+            if(materials["Door Frames"] == 0){
+                materials["Door Frames"] = 1;
             }
             const tableBody = document.querySelector('#materials-table tbody');
             tableBody.innerHTML = '';
