--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <button id="download-button">Download Estimate as PDF</button>
     </div>
 
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
     <script>
         document.getElementById('estimator-form').addEventListener('submit', function(event){
