--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             document.getElementById('sqm').innerHTML = "sqm = "+sqm;
             
             document.getElementById('download-button').addEventListener('click', function() {
-            const { jsPDF } = window.jspdf;
+            const { jsPDF } = window.jspdf.jspdf;
             const pdf = new jsPDF();
             
             // Add a title
@@ -254,5 +254,8 @@
 
         });
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
 </body>
 </html>
