--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             const scale = sqm/16;
 
             const materials = {
-                "Size": width+"x"+length,
+                "Dimensions": width+"x"+length,
                 "Blocks/Bricks": Math.ceil(total_blocks),
                 "Bags of Cement": Math.ceil((total_blocks/44)*2.5),
                 "Loads of Rough Sand": Math.ceil(1 * scale),
